--- a/templates/advanced.html
+++ b/templates/advanced.html
@@ -5,14 +5,13 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="static/css/style.css">
-    <link rel="stylesheet" href="static/css/range.css">
 
   </head>
   <body>
     <div class="container">
     <div class="row">
 
-    <h1>PCA9685 RPi web interface</h1>
+    <h1>PCA9685 RPi web interface (advanced)</h1>
 
     <form class="form-inline">
 
@@ -29,30 +28,42 @@
       <table class="table table-striped table-condensed col-md-10">
         <tr>
           <th>Channel</th>
-          <th colspan="2">Pulse</th>
+          <th>Start</th>
+          <th>End</th>
+          <th>Pulse</th>
+          <th></th>
         </tr>
 
         {{#channels}}
           <tr id="pwm_{{index}}">
             <td class="col-md-1">PWM #{{index}}</td>
-            <td class="col-md-10">
-              <input id="channel_{{index}}_end" class="pwmfast end form-control"
-              data-index="{{index}}" name="channel_{{index}}_end"
-              type="range" min="0" max="1000" value="{{end}}" data-orig-value="{{end}}"/>
+            <td class="col-md-3">
+              <input id="channel_{{index}}_start" class="pwm start form-control"
+              data-index="{{index}}" name="channel_{{index}}_start"
+              type="range" min="0" max="4096" value="{{start}}" data-orig-value="{{start}}"/>
+              <div class="range-value"><span>{{start}}</span></div>
             </td>
-            <td class="col-md-1 nowrap">  
-              <span id="pulse_{{index}}">{{end}} / {{pulse}} ms</span>
+            <td class="col-md-3">
+              <input id="channel_{{index}}_end" class="pwm end form-control"
+              data-index="{{index}}" name="channel_{{index}}_end"
+              type="range" min="0" max="4096" value="{{end}}" data-orig-value="{{end}}"/>
+              <div class="range-value"><span>{{end}}</span></div>
+            </td>
+            <td class="col-md-2" id="pulse_{{index}}">{{pulse}} ms</td>
+            <td class="col-md-1"><input type="button" value="Set"
+              data-index="{{index}}" class="btn btn-primary btn-sm set_pwm">
+              <input type="button" value="Undo"
+                data-index="{{index}}" class="btn btn-default btn-sm undo_pwm">
             </td>
           </tr>
         {{/channels}}
 
       </table>
 
+      <input type="button" value="Set all!" class="btn btn-primary btn-sm" id="set_all">
       <input type="button" value="Reset PWM!" class="btn btn-danger btn-sm" id="reset_all">
 
       <br><br>
-
-      <a href="/advanced">Advanced interface</a>
 
     </form>
 
